--- a/index.html
+++ b/index.html
@@ -3,11 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>ლექცია 11</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+    <header></header>
+    <section>
+        <div class="container1">
+            <nav class="nav1">
+        <h1 class="st">Contact </h1>
+        <h2 class="ss">Contact us to get free support</h2>
+        </nav>
+
+       <div class="container2" class="con2">
+
+<nav class="dd1">
+    <form action="/action_page.php">
+        <label for="lname"></label><br>
+        <input type="text" id="Description" name="Description" value="Description"><br><br>
+
+    </form>
+</nav>
+
+<nav class="dd2">
+    <form action="/action_page.php">
+
+        <label for="lname"></label><br>
+        <input type="text" value="Subject" id="subject"><br><br> 
     
+
+        <label for="lname"></label><br>
+        <input type="text" value="Name / Surname" id="name"><br><br>
+
+        <label for="email"></labe>
+        <input type="email" id="email" name="email" value="Email">
+
+        <input type="submit" value="Send" id="send">
+      </form>
+    </nav>
+
+          </div>
+          <i class="fa-solid fa-envelope"></i>
+
+          <div class="container3" class="con3">
+<nav>
+
+
+</nav>
+
+          </div>
+    </section>
+    <footer>
+
+    </footer>
+
 </body>
 </html>
