--- a/index.html
+++ b/index.html
@@ -50,15 +50,49 @@
     </nav>
 
           </div>
-          <i class="fa-solid fa-envelope"></i>
 
           <div class="container3" class="con3">
-<nav>
-
-
+<nav class="nak">
+   <!-- <img class="" src="images/0.svg" alt="" class="background image"> -->
+    <img src="images/1.svg" alt="Email" class="ema"> 
+    <h1 class="mel">Email</h1>
+    <a href="mailto:education@yahoo.edu.ge " class="en">education@yahoo.edu.ge </a>
+    <a href="mailto:edu.e.education@yahoo.edu.ge" class="en">edu.e.education@yahoo.edu.ge</a>
 </nav>
 
-          </div>
+<nav class="nak">
+    <!-- <img class="" src="images/0.svg" alt="" class="background image"> -->
+    <img src="images/2.png" alt="Tel" class="ema" class="n">
+    <h1 class="mel">Phone</h1>
+    <a href="tel:+995 591 66 6456" class="en">+995 591 66 6456 </a>
+    <a href="tel:+995 591 66 6876" class="en">+995 591 66 6876</a>
+</nav>
+
+<nav class="nak">
+<!-- <img class="" src="images/0.svg" alt="" class="background image"> -->
+<img src="images/3.svg" alt="Map" class="ema">
+<h1 class="mel">Location</h1>
+<a href="iframe:Mail str, Chicago iinois " class="en">Mail str, Chicago iinois </a>
+<a href="iframe:Main street, New York City" class="en">Main street, New York City</a>
+</nav>
+     </div>
+
+     <div class="container4">
+<h1 class="sss">Photos</h1>
+
+<h1 class="sms">See our latest photos
+    from restaurant and hotel</h1>
+</div>
+
+
+<div class="container5" class="con5">
+<nav>
+<img class="sl" src="images/4.png" alt="">
+<img src="images/5.png" alt="">
+<img src="images/6.png" alt="">
+<
+</div>
+
     </section>
     <footer>
 
