--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     </nav>
 
           </div>
-
-          <div class="container3" class="con3">
+<div class="container3" class="con3">
 <nav class="nak">
    <!-- <img class="" src="images/0.svg" alt="" class="background image"> -->
     <img src="images/1.svg" alt="Email" class="ema"> 
@@ -85,17 +84,23 @@
 </div>
 
 
-<div class="container5" class="con5">
-<nav>
+<nav class="container5">
 <img class="sl" src="images/4.png" alt="">
-<img src="images/5.png" alt="">
-<img src="images/6.png" alt="">
-<
-</div>
+<img class="sl"  src="images/5.png" alt="">
+<img class="sl" src="images/6.png" alt="">
+</nav>
 
     </section>
-    <footer>
 
+    <footer>
+<div class="conn6">
+<h1>Zwtta Hotels</h1>
+<h1>Our hotel in on teh huge quality
+    and proffesionalism and with hard
+    work and cearing. You can accept
+    only the best services from our stuff</h1>
+    
+</div>
     </footer>
 
 </body>
